[package]
name = "aoc"
version = "0.1.0"
authors = ["Daniel Szeredi <daniel@szeredi.hu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
serde_json = "1.0.89"
serde = {version = "1.0.150", features = ["derive"]}
regex = "1.7.0"

